--- a/RichEditorView/Assets/editor/rich_editor.html
+++ b/RichEditorView/Assets/editor/rich_editor.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="editor" contentEditable="true" placeholder="" class="placeholder"></div>
+<div id="editor" contentEditable="true" placeholder="請輸入" class="placeholder"></div>
 <script type="text/javascript" src="rich_editor.js"></script>
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript">
+    //去除換行 
+    function ClearBr(key) {
+      if(key !== null && key !== undefined) {
+        key = key.replace(/<\/?. ?>/g, "");
+        key = key.replace(/[\r\n]/g, "");
+        return key;
+      }
+    }
     function word_filter(editor) {
       var content = editor.html();
 
@@ -39,6 +47,8 @@
       // Parse out list indent level for lists
       $('p', editor).each(function () {
         var str = $(this).attr('style');
+        str = ClearBr(str)
+        console.log('style', str);
         var matches = /mso-list:\w+ \w+([0-9]+)/.exec(str);
         if (matches) {
           $(this).data('_listLevel', parseInt(matches[1], 10));
@@ -48,20 +58,29 @@
       // Parse Lists
       var last_level = 0;
       var pnt = null;
+      let listLevelArr = [0];
       $('p', editor).each(function () {
+        let marginLeftStr = parseInt($(this).css("marginLeft").replace('px', ''));
+        let textIndentStr = parseInt($(this).css("textIndent").replace('px', ''));
+        let marginLeftStrTrans = `${marginLeftStr + textIndentStr}px`
+        // console.log('marginLeftStr', marginLeftStr);
+        // console.log('text',  $(this).text());
+        let style = `style="margin-left: ${marginLeftStrTrans}"`;
         var cur_level = $(this).data('_listLevel');
         if (cur_level != undefined) {
           var txt = $(this).text();
-          var list_tag = '<ul></ul>';
+          var list_tag = `<ul ${style}></ul>`;
           if (/^\s*\w+\./.test(txt)) {
             var matches = /([0-9])\./.exec(txt);
             if (matches) {
               var start = parseInt(matches[1], 10);
-              list_tag = start > 1 ? '<ol start="' + start + '"></ol>' : '<ol></ol>';
+              list_tag = start > 1 ? `<ol ${style} start="` + start + '"></ol>' : `<ol ${style}></ol>`;
             } else {
-              list_tag = '<ol></ol>';
+              list_tag = `<ol ${style}></ol>`;
             }
           }
+
+          console.log('list_tag', list_tag);
 
           if (cur_level > last_level) {
             if (last_level == 0) {
@@ -70,19 +89,73 @@
             } else {
               pnt = $(list_tag).appendTo(pnt);
             }
+            listLevelArr.push(cur_level)
           }
           if (cur_level < last_level) {
-            for (var i = 0; i < last_level - cur_level; i++) {
-              pnt = pnt.parent();
+            let listLength = listLevelArr.length;
+            for (var i = 0; i < listLength; i++) {
+              let level = listLevelArr.pop();
+              if(cur_level >= level) {
+                // listLevelArr.push(level);
+                break;
+              }
+              else {
+                  pnt = pnt.parent();
+              }
             }
           }
           $('span:first', this).remove();
-          pnt.append('<li>' + $(this).html() + '</li>')
+          // if(pnt !== null) {
+            pnt.append('<li>' + $(this).html() + '</li>')
+          // }
           $(this).remove();
           last_level = cur_level;
         } else {
           last_level = 0;
         }
+      })
+
+      $('li', editor).each(function () {
+        let marginLeftStr = $(this).css("marginLeft");
+        $(this).attr('style', '');
+        $(this).css("marginLeft", marginLeftStr);
+      })
+      
+      $('ul, ol', editor).each(function () {
+        let marginLeftStr = $(this).css("marginLeft");
+        $(this).removeAttr("style");
+        $(this).css("marginLeft", marginLeftStr);
+        $(this).css("wordBreak", 'word-break: break-all')
+      })
+
+      $('b, i, u, s, font, a, code, button, strong', editor).each(function () {
+        console.log($(this));
+        $(this).replaceWith(function(){
+            return $("<span />", {html: $(this).html()});
+        });
+      })
+
+      $('u', editor).each(function () {
+        $(this).replaceWith(function(){
+            return $("<span />", {html: $(this).html()});
+        });
+      })
+
+      $('h1, h2, h3 , h4, h5', editor).each(function () {
+        $(this).replaceWith(function(){
+            let marginLeftStr = $(this).css("marginLeft");
+            let replace = $("<p />", {html: $(this).html()})
+            // replace.css("marginLeft", marginLeftStr);
+            return replace;
+        });
+      })
+
+      $('p, div', editor).each(function () {
+        let marginLeftStr = $(this).css("marginLeft");
+        let textIndentStr = $(this).css("textIndent");
+        $(this).removeAttr("style");
+        $(this).css("marginLeft", marginLeftStr);
+        $(this).css("textIndent", textIndentStr);
       })
 
       // $('[style]', editor).removeAttr('style');
